added the contact form

--- a/src/index/index.css
+++ b/src/index/index.css
@@ -5,34 +5,33 @@ body {
   #home {
     padding-top: 100px;
     height: 800px;
-    color: #fff;
     background-color: white;
   }
 
   #section1 {
     padding-top: 100px;
     height: 800px;
-    color: #fff;
     background-color: #1E88E5;
   }
 
   #section2 {
     padding-top: 100px;
     height: 800px;
-    color: #fff;
     background-color: #673ab7;
   }
 
   #section3 {
     padding-top: 100px;
     height: 800px;
-    color: #fff;
     background-color: #ff9800;
   }
 
-  #section4 {
+  #contact {
     padding-top: 100px;
     height: 800px;
-    color: #fff;
-    background-color: #00bcd4;
+  }
+  #test {
+    padding-top: 100px;
+    height: 800px;
+    background-color: #673ab7;
   }
